@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 0f9a4d4e9356fc36af5c3100458f776651b83154 ChangeLog
+SHA1 7d8f0ce2d68b8343e205a4ed6582be3e3ef2f1cb ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2b6b8f9fc192662e60281ea9353bfafae92e2774 MANIFEST
-SHA1 e9d313c52c5bef957a7c63c9938112ff8be1eb1d META.yml
-SHA1 40c6368bdf563e2bc62bd386b0ee6445a17d4a0b MYMETA.json
-SHA1 028f799c4c84cf6866ce1742eb1d550f046a3fbc MYMETA.yml
-SHA1 4c67e2f2f20be6bcb12938d99661702c8933b239 Makefile.PL
+SHA1 c9492bc7d083bc4153d2363231b1a6418aad57ef META.yml
+SHA1 0313c77a19a0a0b622a2a90a391d4ede68de9b74 MYMETA.json
+SHA1 e1dbc33e3666ad66e6fc2ef2721af93ac075ef1c MYMETA.yml
+SHA1 391a9e34fc17c7b6e5ef4508fd8432c28dd54a38 Makefile.PL
 SHA1 fd6c642523f44765fc64b3515231a3ad62f90d73 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 68842d379ab357ad7450e8d157509b43bcfde58c lib/Net/FullAuto.pm
+SHA1 fa8034ff973b906413cba35f5647718ce917ef98 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
@@ -54,7 +54,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlBfEJAACgkQJM3IZYB6aOr3cgCglZ25uIVp/hlidjLN4qbZFo35
-gLkAnjb3sUQM9Dn5saseH2nQT7Ts/L8C
-=SZgE
+iEYEARECAAYFAlBfJ/YACgkQJM3IZYB6aOprvgCfalUGcEuTuw6e1A8Ve4YU5jPZ
+5rcAnimX0xV351OfiPASnJTLBc7GBZEl
+=WpNb
 -----END PGP SIGNATURE-----
